First solve attempt.

--- a/MapNav.Tests/MapNav.Tests.csproj
+++ b/MapNav.Tests/MapNav.Tests.csproj
@@ -89,6 +89,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\FacingTest.cs" />
+    <Compile Include="Models\InstructionTest.cs" />
+    <Compile Include="Models\PositionTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
   </ItemGroup>
